--- a/src/index.css
+++ b/src/index.css
@@ -34,7 +34,8 @@
 .loader {
   width: 25px;
   aspect-ratio: 4;
-  --_g: no-repeat radial-gradient(circle closest-side, #000 90%, #0000);
+  --_g: no-repeat radial-gradient(circle closest-side, #efeaea 90%, #cfc5c500);
+  /* --_g: no-repeat radial-gradient(circle closest-side, #000 90%, #0000); */
   background:
     var(--_g) 0% 50%,
     var(--_g) 50% 50%,
